--- a/package.json
+++ b/package.json
@@ -41,8 +41,7 @@
     "test:watch": "node node_modules/jest/bin/jest.js --watch",
     "test:coverage": "node node_modules/jest/bin/jest.js --coverage",
     "lint": "./node_modules/.bin/eslint . --fix; exit 0",
-    "pretty": "prettier --semi false --print-width 100 --single-quote --trailing-comma none --write \"src/**/*.js\"",
-    "precommit": "lint-staged && yarn test"
+    "pretty": "prettier --semi false --print-width 100 --single-quote --trailing-comma none --write \"src/**/*.js\""
   },
   "lint-staged": {
     "*.js": [
